--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -6,7 +6,20 @@
   <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
 </head>
 <body>
+
 <script>
+  const pressed = []
+  const secretCode = 'on3iro'
+
+  window.addEventListener('keyup', e => {
+    pressed.push(e.key)
+    pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length)
+    if (pressed.join('') === secretCode) {
+      console.log('Yay you passed')
+      cornify_add()
+    }
+  })
 </script>
+
 </body>
 </html>
